--- a/app1/app1-web/src/main/webapp/index.xhtml
+++ b/app1/app1-web/src/main/webapp/index.xhtml
@@ -67,6 +67,11 @@
                 #{_member.phoneNumber}
             </h:column>
          <h:column>
+         <h:column>
+            <f:facet name="header">Phone #</f:facet>
+                #{_member.adress}
+            </h:column>
+         <h:column>
             <f:facet name="header">REST URL</f:facet>
             <a href="#{request.contextPath}/rest/members/#{_member.id}">/rest/members/#{_member.id}</a>
          </h:column>
